<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_discovery"
        android:icon="@drawable/search"
        android:title="@string/nav_discovery" />
    <item
        android:id="@+id/nav_photo"
        android:icon="@drawable/add_photo"
        android:title="@string/nav_add_photo" />
    <item
        android:id="@+id/nav_activity"
        android:icon="@drawable/favorite"
        android:title="@string/nav_activity" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/person"
        android:title="@string/nav_profile" />
</menu>